[package]
name = "rahashmap"
version = "0.2.13"
authors = ["Jonathan Behrens <fintelia@gmail.com>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
description = "Fork of standard library HashMap with additional functionality."
keywords = ["data-structure", "hashmap"]
categories = ["data-structures"]
repository = "https://github.com/fintelia/rahashmap"
documentation = "https://docs.rs/rahashmap"

[dependencies]
rand = "0.5.3"
